tests/fixtures/invalid/enum_invalid_start_value.c
int main(void) {
    enum BadStart { FIRST = [?] };
    return FIRST;
}
